restaurant-os/src/pages/browseItems_page/BrowseItemsPage.css
.browseItemsClass {
    display: flex;
    flex-direction: column;
    align-items: center;
    /*background-color: #FFFFFF;  White background color */
    font-family: 'Arial', sans-serif; /* Sample font; you can replace this with any font of your choice */
    height: 100vh; /* Occupy full viewport height */
    padding: 20px;
    box-sizing: border-box;
    z-index: 1;
}

.cover-image {
    width: 100%;
    height: 100%;
    position: fixed;
    background-size: cover;
    z-index: 0;
    opacity: 0.6;
    /* background-repeat: repeat-x; does not make it repeat*/
}

.my-row{
    margin-bottom: 8px; /* Adjust the margin as needed */ 
}

